Sat Jun 26 00:04:27 2010  Akinori MUSHA  <knu@iDaemons.org>

	* lib/fileutils.rb (FileUtils#rmdir): Backport -p (parents).  This
	  fixes "make clean".

Fri Jun 25 23:45:24 2010  Akinori MUSHA  <knu@iDaemons.org>

	* common.mk (version.$(OBJEXT)): Fix build. (GNU make seems to
	  have handled it)

Fri Jun 25 11:37:34 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
	  patch by Wataru Kimura.  [ruby-core:30842] [Backport #3474]

Wed Jun 23 21:36:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: avoid getcontext() overhead if possible.
	[ruby-core:27380][Bug #2553]
	Thanks, Joe Damato, Dan Peterson and Patrick Mohr.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Tue Jun 15 10:29:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (rb_big2dbl), test/ruby/test_bignum.rb (test_to_f):
	  A negative Bignum out of Float range should be converted to -Infinity.
	  [ruby-core:30492] [Bug #3362]

Mon Jun 14 18:32:38 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: raise DRbConnError instead of ArgumentError if too
	  many arguments. [ruby-dev:41481]

	* test/drb/test_drb.rb: ditto.

	* test/drb/drbtest.rb: ditto.

Sat Jun 12 10:02:26 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_syscall): should check argument string taint before
	  invoking system calls.

Thu Jun 10 14:45:28 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/dl/dl.c (rb_dl_strdup): strdup() only allocates a buffer of
	  strlen()+1 bytes. [Bug #2794]

Tue Jun  8 18:32:47 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in (USE_WINSOCK2): ws2tcpip.h needs listed here.

Mon Jun  7 18:18:03 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include errno.h before defining errnos.
